--- a/app/views/welcome/about.html.erb
+++ b/app/views/welcome/about.html.erb
@@ -1,3 +1,5 @@
 <h1>Welcome to Blocipedia</h1>
 
 <p>A SaaS app that allows users to create their own wikis.</p>
+
+<%= link_to "Logout", destroy_user_session_path, method: :delete %>
