--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -40,17 +40,40 @@
 
     <div class="navbar navbar-default navbar-static-top">
       <div class="container">
+
+        <% if user_signed_in? %>
+            <div class= "pull-right">
+              <div class= "btn btn-success">
+                <%= current_user.email %>
+              </div>
+            </div>
+            <% end %>
+
         <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-responsive-collapse">
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="#">Blocipedia</a>
+        <%= link_to "Blocipedia", root_path, class: "navbar-brand" %>
         <div class="navbar-collapse collapse navbar-responsive-collapse">
           <ul class="nav navbar-nav">
-            <li><%= link_to "Link1", "/path1"  %></li>
-            <li><%= link_to "Link2", "/path2"  %></li>
-            <li><%= link_to "Link3", "/path3"  %></li>
+
+            <% if user_signed_in? %>
+                <li>
+                  <%= link_to "Logout", destroy_user_session_path, method: :delete, class: "btn btn-danger" %>
+                </li>
+                <% end %>
+
+            <% if !user_signed_in? %>
+              <li>
+                <%= link_to "Sign Up", new_user_registration_path, class: "btn btn-info" %>
+              </li>
+
+              <li>
+                <%= link_to "Sign In", new_user_session_path, class: "btn btn-primary" %>
+              </li>
+            <% end %>
+
           </ul>
         </div>
       </div>
@@ -62,21 +85,10 @@
           <%= bootstrap_flash %>
           <%= yield %>
         </div>
-        <div class="col-lg-3">
-          <div class="well sidebar-nav">
-            <h3>Sidebar</h3>
-            <ul class="nav nav-list">
-              <li class="nav-header">Sidebar</li>
-              <li><%= link_to "Link1", "/path1"  %></li>
-              <li><%= link_to "Link2", "/path2"  %></li>
-              <li><%= link_to "Link3", "/path3"  %></li>
-            </ul>
-          </div><!--/.well -->
-        </div><!--/span-->
       </div><!--/row-->
 
       <footer>
-        <p>&copy; Company 2016</p>
+        <p>&copy; SEP 2016</p>
       </footer>
 
     </div> <!-- /container -->
