--- a/app/views/welcome/about.html.erb
+++ b/app/views/welcome/about.html.erb
@@ -1,5 +1,11 @@
-<h1>Welcome to Blocipedia</h1>
 
-<p>A SaaS app that allows users to create their own wikis.</p>
+<div class="jumbotron">
+  <h1>Welcome to Blocipedia</h1>
+  <p>A SaaS app that allows users to create their own wikis.</p>
 
-<%= link_to "Logout", destroy_user_session_path, method: :delete %>
+  <% if !user_signed_in? %>
+      <%= link_to "Sign Up", new_user_registration_path, class: "btn btn-info" %>
+
+      <%= link_to "Sign In", new_user_session_path, class: "btn btn-primary" %>
+  <% end %>
+</div>
