--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -60,17 +60,17 @@
 
             <% if user_signed_in? %>
                 <li>
-                  <%= link_to "Logout", destroy_user_session_path, method: :delete, class: "btn btn-danger" %>
+                  <%= link_to "Logout", destroy_user_session_path, method: :delete %>
                 </li>
                 <% end %>
 
             <% if !user_signed_in? %>
               <li>
-                <%= link_to "Sign Up", new_user_registration_path, class: "btn btn-info" %>
+                <%= link_to "Sign Up", new_user_registration_path %>
               </li>
 
               <li>
-                <%= link_to "Sign In", new_user_session_path, class: "btn btn-primary" %>
+                <%= link_to "Sign In", new_user_session_path %>
               </li>
             <% end %>
 
