--- a/app/views/wikis/new.html.erb
+++ b/app/views/wikis/new.html.erb
@@ -12,24 +12,7 @@
   </div>
 
   <div class="col-md-8">
-  <%= form_for @wiki do |form| %>
-
-    <div class="form-group">
-      <%= form.label :title %>
-      <%= form.text_field :title, class: 'form-control', placeholder: 'Enter Title' %>
-    </div>
-
-    <div class="form-group">
-      <%= form.label :body %>
-      <%= form.text_area :body, class: 'form-control', placeholder: 'Enter wiki text' %>
-    </div>
-
-      <%= form.check_box :private %> Private Wiki
-
-    <div class="form-group">
-      <%= form.submit 'Save', class: 'btn btn-success' %>
-    </div>
-  <% end %>
+    <%= render partial: 'form', locals: { wiki: @wiki } %>
   </div>
 
 </div>
