--- a/app/views/wikis/show.html.erb
+++ b/app/views/wikis/show.html.erb
@@ -4,6 +4,7 @@
 
   <div class="col-md-8">
     <p><%= @wiki.body %></p>
+    <h3><strong>Created by:<%= @wiki.user.email %><strong></h3>
   </div>
 
   <div class="col-md-4">
