--- a/app/views/welcome/about.html.erb
+++ b/app/views/welcome/about.html.erb
@@ -21,5 +21,9 @@
     <li>
         <%= link_to "Logout", destroy_user_session_path, method: :delete, class: "btn btn-danger" %>
     </li>
+<br>
+    <li>
+        <%= link_to "View all users", users_path, class: "btn btn-default" %>
+    </li>
   <% end %>
 </div>
