--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -9,4 +9,7 @@
   <div class="col-md-4">
   </div>
 </div>
-<%= link_to "Delete User", @user, method: :delete, class: 'btn btn-danger', data: {confirm: 'Are you sure you want to delete this user?'} unless @user == @current_user  %>
+
+<% if current_user.admin? %>
+  <%= link_to "Delete User", @user, method: :delete, class: 'btn btn-danger', data: {confirm: 'Are you sure you want to delete this user?'} unless @user == @current_user  %>
+<% end %>
