--- a/app/views/welcome/about.html.erb
+++ b/app/views/welcome/about.html.erb
@@ -10,20 +10,24 @@
   <% end %>
 
   <% if user_signed_in? %>
-    <li>
+    <ul>
         <%= link_to "Create a new wiki", new_wiki_path, class: "btn btn-success" %>
-    </li>
+    </ul>
     <br>
-    <li>
+    <ul>
         <%= link_to "View all wikis", wikis_path, class: "btn btn-info" %>
-    </li>
+    </ul>
     <br>
-    <li>
+    <ul>
         <%= link_to "Logout", destroy_user_session_path, method: :delete, class: "btn btn-danger" %>
-    </li>
-<br>
-    <li>
+    </ul>
+    <br>
+
+    <% if current_user.admin? %>
+    <ul>
         <%= link_to "View all users", users_path, class: "btn btn-default" %>
-    </li>
+    </ul>
+    <% end %>
   <% end %>
+  <br>
 </div>
