--- a/app/views/wikis/show.html.erb
+++ b/app/views/wikis/show.html.erb
@@ -5,11 +5,12 @@
   <div class="col-md-8">
     <p><%= @wiki.body %></p>
     <p><strong>Private Wiki? <%= @wiki.private %></strong></p>
-    <h3>Created by:<%= @wiki.user.email %></h3>
   </div>
 
   <div class="col-md-4">
-    <%= link_to "Edit Wiki", edit_wiki_path(@wiki), class: 'btn btn-success' %>
-    <%= link_to "Delete Wiki", @wiki, method: :delete, class: 'btn btn-danger', data: {confirm: 'Are you sure you want to delete this wiki?'} %>
+      <%= link_to "Edit Wiki", edit_wiki_path(@wiki), class: 'btn btn-success' %>
+    <% if current_user.admin? %>
+      <%= link_to "Delete Wiki", @wiki, method: :delete, class: 'btn btn-danger', data: {confirm: 'Are you sure you want to delete this wiki?'} %>
+    <% end %>
   </div>
 </div>
