--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -26,6 +26,15 @@
   </div>
 </div>
 
+<% if current_user.role == 'premium' %>
+  <p> <%= button_to "Downgrade Account to Standard", class: 'btn btn-primary', data: { confirm: "WARNING: Private Wikis will become if you downgrade.  Would you still like to proceed" }, method: :post %> </p>
+<% end %>
+
+<% if current_user.role == 'standard' || current_user.role == 'admin' %>
+  <p> <%= link_to "Premium Plan", new_charge_path, class: 'btn btn-info' %> <br>
+<% end %>
+
+
 <p><%= t('.unhappy', :default => 'Unhappy') %>? <%= link_to t('.cancel_my_account', :default => "Cancel my account"), registration_path(resource_name), :data => { :confirm => t('.are_you_sure', :default => "Are you sure?") }, :method => :delete %>.</p>
 
 <%= link_to t('.back', :default => 'Back'), :back %>
