--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -40,24 +40,24 @@
 
     <div class="navbar navbar-default navbar-static-top">
       <div class="container">
-
-        <% if user_signed_in? %>
-            <div class= "pull-right">
-              <div class= "btn btn-success">
-                <%= current_user.email %>
-              </div>
-            </div>
-            <% end %>
-
         <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-responsive-collapse">
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
+
         <%= link_to "Blocipedia", root_path, class: "navbar-brand" %>
+        <% if user_signed_in? %>
+            <div class= "pull-right">
+              <div class= "btn btn-success">
+                <%= current_user.email %> |
+                <%= current_user.role.titleize %> Account 
+              </div>
+            </div>
+            <% end %>
+
         <div class="navbar-collapse collapse navbar-responsive-collapse">
           <ul class="nav navbar-nav">
-
             <% if user_signed_in? %>
                 <li>
                   <%= link_to "Logout", destroy_user_session_path, method: :delete %>
