added upgrade and downgrade capibility

--- a/app/views/wikis/show.html.erb
+++ b/app/views/wikis/show.html.erb
@@ -5,11 +5,15 @@
   <div class="col-md-8">
     <p><%= @wiki.body %></p>
     <p><strong>Private Wiki? <%= @wiki.private %></strong></p>
+    <p>Created by <%= @wiki.user.email %></p>
   </div>
 
   <div class="col-md-4">
+    <% if @wiki.private == false || (current_user.admin? || current_user.premium?) %>
       <%= link_to "Edit Wiki", edit_wiki_path(@wiki), class: 'btn btn-success' %>
-    <% if current_user.admin? %>
+    <% end %>
+
+    <% if current_user.admin? || (@wiki.user_id == current_user.id) %>
       <%= link_to "Delete Wiki", @wiki, method: :delete, class: 'btn btn-danger', data: {confirm: 'Are you sure you want to delete this wiki?'} %>
     <% end %>
   </div>
