--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -27,13 +27,15 @@
 </div>
 
 <% if current_user.role == 'premium' %>
-  <p> <%= button_to "Downgrade Account to Standard", class: 'btn btn-primary', data: { confirm: "WARNING: Private Wikis will become if you downgrade.  Would you still like to proceed" }, method: :post %> </p>
+  <p> <%= link_to "Downgrade Account to Standard", downgrade_user_path(current_user),
+                  class: 'btn btn-danger', data: { confirm: "Private Wikis will become public if you downgrade.  Would you like to proceed?" },
+                  method: :post %> </p>
 <% end %>
 
-<% if current_user.role == 'standard' || current_user.role == 'admin' %>
-  <p> <%= link_to "Premium Plan", new_charge_path, class: 'btn btn-info' %> <br>
+<% if current_user.role == 'standard' %>
+   <p><%= link_to "Upgrade to Premium Plan", new_charge_path, class: 'btn btn-info' %></p>
 <% end %>
-
+<br>
 
 <p><%= t('.unhappy', :default => 'Unhappy') %>? <%= link_to t('.cancel_my_account', :default => "Cancel my account"), registration_path(resource_name), :data => { :confirm => t('.are_you_sure', :default => "Are you sure?") }, :method => :delete %>.</p>
 
