--- a/app/views/wikis/_form.html.erb
+++ b/app/views/wikis/_form.html.erb
@@ -10,13 +10,14 @@
     <%= form.text_area :body, class: 'form-control', placeholder: 'Enter wiki text' %>
   </div>
 
-  <% if current_user.admin? || current_user.premium? %>
+<div class="private">
+  <% if (current_user.admin? || current_user.premium?) %>
   <div class="form-group">
         <%= form.label :private %>
         <%= form.check_box :private %> Private wiki
-    </div>
+  </div>
   <% end %>
-
+</div>
 
   <div class="form-group">
     <%= form.submit 'Save', class: 'btn btn-success' %>
