--- a/app/views/wikis/show.html.erb
+++ b/app/views/wikis/show.html.erb
@@ -1,11 +1,10 @@
-<h1><%= @wiki.title %></h1>
+<h1><%= markdown(@wiki.title) %></h1>
 
 <div class="row">
 
   <div class="col-md-8">
-    <p><%= @wiki.body %></p>
-    <p><strong>Private Wiki? <%= @wiki.private %></strong></p>
-    <p>Created by <%= @wiki.user.email %></p>
+    <p><%= markdown(@wiki.body) %></p>
+    <p><strong>Created by <%= @wiki.user.email %></strong></p>
   </div>
 
   <div class="col-md-4">
