added collab views

--- a/app/views/collaborators/new.html.erb
+++ b/app/views/collaborators/new.html.erb
@@ -1,2 +1,5 @@
-<h1>Collaborators#new</h1>
-<p>Find me in app/views/collaborators/new.html.erb</p>
+<h1>Add Collaborator</h1>
+
+<%= form_for @wiki do |form| %>
+
+<% end %>
