--- a/app/views/collaborators/new.html.erb
+++ b/app/views/collaborators/new.html.erb
@@ -1,5 +1,13 @@
 <h1>Add Collaborator</h1>
 
-<%= form_for @wiki do |form| %>
+<%= form_for [@wiki, @collaborator] do |f| %>
+
+  <div class="form-group">
+    <%= f.select 'user_id', options_for_select(@users.collect{ |collab| [collab.email, collab.id] }) %>
+  </div>
+
+  <div class="form-group">
+    <%= f.submit "Save", class: 'btn btn-success' %>
+  </div>
 
 <% end %>
