--- a/app/views/wikis/edit.html.erb
+++ b/app/views/wikis/edit.html.erb
@@ -1,7 +1,6 @@
 <h1>Edit Wiki</h1>
 
 <div class="row">
-
   <div class="col-md-4">
     <p>Guidelines for Wikis</p>
       <ul>
@@ -14,5 +13,10 @@
   <div class="col-md-8">
     <%= render partial: 'form', locals: { wiki: @wiki } %>
   </div>
+</div>
 
+<div class="collab">
+  <% if current_user == @wiki.user || current_user.admin? %>
+    <%= link_to 'Add Collaborator', new_wiki_collaborator_path(@wiki), class:"btn btn-info" %>
+  <% end %>
 </div>
