--- a/app/views/wikis/show.html.erb
+++ b/app/views/wikis/show.html.erb
@@ -1,3 +1,4 @@
+
 <h1><%= markdown(@wiki.title) %></h1>
 
 <div class="row">
@@ -7,19 +8,23 @@
     <p><strong>Created by <%= @wiki.user.email %></strong></p>
   </div>
 
-  <% if @wiki.private %>
-    <% if Collaborator.exists?(wiki_id: @wiki) %>
-      <%= render partial: 'collaborators/users' %>
-    <% end %>
-  <% end %>
-
   <div class="col-md-4">
-    <% if @wiki.private == false || (current_user.admin? || current_user.premium?) %>
-      <%= link_to "Edit Wiki", edit_wiki_path(@wiki), class: 'btn btn-success' %>
-    <% end %>
+    <div class="see_collaborators">
+      <% if @wiki.user == current_user || current_user.admin? %>
+        <% if Collaborator.exists?(wiki_id: @wiki) %>
+          <%= render partial: 'collaborators/users' %>
+        <% end %>
+      <% end %>
+    </div>
 
-    <% if current_user.admin? || (@wiki.user_id == current_user.id) %>
-      <%= link_to "Delete Wiki", @wiki, method: :delete, class: 'btn btn-danger', data: {confirm: 'Are you sure you want to delete this wiki?'} %>
-    <% end %>
+    <div class="edits">
+      <% if @wiki.private == false || (current_user.admin? || @wiki.user_id == current_user.id)|| @wiki.collaborators.include?(current_user) %>
+        <%= link_to "Edit Wiki", edit_wiki_path(@wiki), class: 'btn btn-success' %>
+      <% end %>
+
+      <% if current_user.admin? || (@wiki.user_id == current_user.id) %>
+        <%= link_to "Delete Wiki", @wiki, method: :delete, class: 'btn btn-danger', data: {confirm: 'Are you sure you want to delete this wiki?'} %>
+      <% end %>
+    </div>
   </div>
 </div>
