--- a/app/views/wikis/show.html.erb
+++ b/app/views/wikis/show.html.erb
@@ -18,7 +18,7 @@
     </div>
 
     <div class="edits">
-      <% if @wiki.private == false || (current_user.admin? || @wiki.user_id == current_user.id)|| @wiki.collaborators.include?(current_user) %>
+      <% if @wiki.private == false || (current_user.admin? || @wiki.user_id == current_user.id || @wiki.collaborators.include?(user_id: current_user.id)) %>
         <%= link_to "Edit Wiki", edit_wiki_path(@wiki), class: 'btn btn-success' %>
       <% end %>
 
