--- a/app/views/wikis/_form.html.erb
+++ b/app/views/wikis/_form.html.erb
@@ -11,7 +11,7 @@
   </div>
 
   <div class="private">
-    <% if (current_user.admin? || current_user.premium?) %>
+    <% if (current_user.admin? || (current_user.premium? && wiki.user == current_user)) %>
     <div class="form-group">
           <%= form.label :private %>
           <%= form.check_box :private %> Private wiki
