--- a/app/views/collaborators/new.html.erb
+++ b/app/views/collaborators/new.html.erb
@@ -3,7 +3,7 @@
 <%= form_for [@wiki, @collaborator] do |f| %>
 
   <div class="form-group">
-    <%= f.select 'user_id', options_for_select(@users.collect{ |collab| [collab.email, collab.id] }) %>
+    <%= f.select 'user_id', options_for_select(@wiki.available_users.collect{ |collab| [collab.email, collab.id] }) %>
   </div>
 
   <div class="form-group">
