DRYed up wiki policy

--- a/app/views/wikis/show.html.erb
+++ b/app/views/wikis/show.html.erb
@@ -16,6 +16,7 @@
     </div>
 
     <div class="edits">
+      <!-- use <% policy(@wiki).edit? %>  -->
       <% if @wiki.private == false || (current_user.admin? || @wiki.user == current_user || @wiki.users.include?(current_user)) %>
         <%= link_to "Edit Wiki", edit_wiki_path(@wiki), class: 'btn btn-success' %>
       <% end %>
